--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@react-navigation/native": "~6.0.1",
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "~6.2.1",
+    "@tanstack/react-query": "^4.0.10",
     "@types/axios": "^0.14.0",
     "apisauce": "2.1.5",
     "axios": "^0.27.2",
